--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <metta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2°a CESB</title>
@@ -9,11 +9,11 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="Adicione uma imagem" alt="Img Icon">
+        <img class="cabecalho-imagem" src="menu.png" alt="menu">
         <ul class="cabecalho-lista">
-            <li class="cabecalho-itens">Projetos</li>
-            <li class="cabecalho-itens">Alunos</li>
-            <li class="cabecalho-itens">Qeum Somos?</li>
+           <li class="cabecalho-itens">Escola</li>
+		 <li class="cabecalho-itens">Alunos</li>
+		
         </ul>
     </header>
 </body>
