--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
         <ul class="cabecalho-lista">
            <li class="cabecalho-itens">Escola</li>
 		 <li class="cabecalho-itens">Alunos</li>
-		
-        </ul>
-    </header>
+	</ul>
+  </header>
+
+<section> class="cesb">
+    <h2 class="conheça nossa turma">Conheça nossa turma!</h2>
+    <p class="Texto sala">Aqui podemos encontrar os alunos do 2° ano e os projetos desenvolvidos pela turma</p>
+    </section>
+    
 </body>
 </html>
