--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
 	</ul>
   </header>
 
-<section> class="cesb">
-    <h2 class="conheça nossa turma">Conheça nossa turma!</h2>
-    <p class="Texto sala">Aqui podemos encontrar os alunos do 2° ano e os projetos desenvolvidos pela turma</p>
+<section class="cesb">
+    <h2 class="conheça-nossa-turma">Conheça nossa turma!</h2>
+    <p class="Texto-sala">Aqui podemos encontrar os alunos do 2° ano e os projetos desenvolvidos pela turma</p>
     </section>
+
+<section class="alunos">
+      <div class="div-alunos"></div>
+      <img class="imagem-aluno" src=" imagem-da-turma" alt="Imagem Alunos">
     
 </body>
 </html>
